# XFormant

./: .clang-format  .gitignore  CMakeLists.txt
Source/: PluginProcessor.h
